<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search_str">Поиск</string>
    <string name="media_str">Медиатека</string>
    <string name="settings_str">Настройки</string>
    <string name="dark_theme_str">Тёмная тема</string>
    <string name="share_str">Поделиться приложением</string>
    <string name="support_str">Написать в поддержку</string>
    <string name="agreement_str">Пользовательское соглашение</string>
    <string name="share_text">Изучай android-разработку здесь: https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="mail_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="mail_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="email">fainashi@yandex.ru</string>
    <string name="agreement_url">https://yandex.ru/legal/practicum_offer/</string>
    <string name="search_input_hint">Поиск</string>
    <string name="track_name_placeholder">Название композиции</string>
    <string name="artist_name_placeholder">Исполнитель</string>
    <string name="track_time_placeholder">0:00</string>
    <string name="something_went_wrong">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="update_button_str">Обновить</string>
    <string name="history_message">История поиска</string>
    <string name="clear_history_button">Очистить историю</string>
    <string name="time_str">Длительность</string>
    <string name="album_str">Альбом</string>
    <string name="year_str">Год</string>
    <string name="genre_str">Жанр</string>
    <string name="country_str">Страна</string>
    <string name="track_name_val_str">Yesterday (Remastered 2009)</string>
    <string name="artist_val_str">The Beatles</string>
    <string name="time_val_str">5:35</string>
    <string name="album_val_str">Yesterday (Remastered 2009)</string>
    <string name="year_val_str">1965</string>
    <string name="genre_val_str">Rock</string>
    <string name="country_val_str">Великобритания</string>
    <string name="favourites_empty">Ваша медиатека пуста</string>
    <string name="playlists_empty">Вы не создали\nни одного плейлиста</string>
    <string name="new_playlist_button_str">Новый плейлист</string>
    <string name="favourites_tab_title">Избранные треки</string>
    <string name="playlists_tab_title">Плейлисты</string>
    <string name="create_playlist_str">Новый плейлист</string>
    <string name="create_playlist_button_str">Создать</string>
    <string name="new_playlist_name_hint">Название*</string>
    <string name="new_playlist_info_hint">Описание</string>
    <string name="material_alert_title_placeholder">Заголовок</string>
    <string name="material_alert_neutral_button_placeholder">НЕТ</string>
    <string name="material_alert_positive_button_placeholder">ДА</string>
    <string name="share_playlist_button_str">Поделиться</string>
    <string name="edit_playlist_button_str">Редактировать информацию</string>
    <string name="delete_playlist_button_str">Удалить плейлист</string>
    <string name="edit_playlist_title">Редактировать информацию</string>
    <string name="edit_playlist_save_button_text">Сохранить</string>
    <string name="playlist_no_tracks_text">В этом плейлисте нет треков</string>

    // bottom menu labels
    <string name="menu_search_label">Поиск</string>
    <string name="menu_media_label">Медиатека</string>
    <string name="menu_settings_label">Настройки</string>
</resources>